# pytest-booker-platform-api

./: .env.example  .gitignore  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt  swagger_coverage_config.yaml
.github/workflows/: ci.yml  deploy-docs.yml
allure/: index.html
allure/47/: index.html
allure/48/: index.html
allure/49/: index.html
allure/50/: index.html
allure/51/: index.html
allure/52/: index.html
allure/53/: index.html
allure/54/: index.html
allure/55/: index.html
allure/56/: index.html
allure/57/: index.html
allure/58/: index.html
allure/59/: index.html
allure/last-history/: retry-trend.json
coverage/47/: index.html
coverage/48/: index.html
coverage/49/: index.html
coverage/50/: index.html
coverage/51/: index.html
coverage/52/: index.html
coverage/53/: index.html
coverage/54/: index.html
coverage/55/: index.html
coverage/56/: index.html
coverage/57/: index.html
coverage/58/: index.html
coverage/59/: index.html
docs/: ACCESS_MATRIX_EN.md  ACCESS_MATRIX_RU.md  restful-booker-platform-openapi.json
docs/zudoku/: package.json  zudoku.config.tsx
fixtures/: allure.py  auth.py
scripts/: wait_for_services.py
src/: config.py
src/clients/: api_client.py  api_coverage.py  client_factories.py  event_hooks.py  factories.py
src/utils/: fakers.py  logger.py  validators.py
tests/: test_api_health.py  test_health.py
tests/auth/: test_authentication.py
zudoku-doc/: 400.html  404.html  500.html  api.html  index.html  overview.en.html  overview.html
zudoku-doc/api/: auth.html  (+5 more)
(+1706 files in other folders)
