[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-booker-platform-api"
description = "API Test Automation Framework for the RESTful Booker Platform. Built with Python, Pytest, HTTPX, and Pydantic. Features Dockerized execution, CI/CD with GitHub Actions, Allure reports, and API contract validation."
keywords = ["aqa", "automation", "api-testing", "restful-booker-platform", "microservices", "pytest", "allure", "swagger-coverage-tool"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest==9.0.2",
    "pytest-xdist==3.8.0",
    "pytest-rerunfailures==16.1",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "jsonschema==4.25.1",
    "allure-pytest==2.15.2",
    "swagger-coverage-tool==0.31.0",
    "Faker==38.2.0",
    "email-validator==2.3.0",
]

[tool.pytest.ini_options]
addopts = "-v -s --tb=short"
python_files = "*_tests.py *_test.py test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "authentication: auth tests.",
    "health: checking the status of servers.",
    "regression: marking for regression tests."
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"